--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -20,5 +20,6 @@
             <tr><td>You have nothing to do.</td></tr>
         {% endfor %}
     </table>
+    <a href="/add">Add An Item</a>
 </body>
 </html>
